databaseCourse/elements/pl-relax-element/relax-element.css
.dropdown-content,
.submenu-content,
.sub-submenu-content,
.sub-sub-submenu-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 120px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 10;
}

.dropdown-content a,
.submenu-content a,
.sub-submenu-content a {
	color: black;
	padding: 8px;
	min-width: 120px;
	text-decoration: none;
	display: block;
	z-index: 10;
}

.dropdown-content a:hover,
.submenu-content a:hover,
.sub-submenu-content a:hover,
.sub-sub-submenu-content a:hover {
  background-color: #ddd
}


.popup-content {
	display: none;
	position:absolute;
	background-color: #f1f1f1;
	min-width: 0px;
	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
	z-index: 1;
	height: 10px;
}

.dropbtn {
	font-family: ubuntu, sans-serif;
	border: none;
	background-color: transparent;
	margin: 0.25em 0 0.25em 0;
	transition: padding-left 0.3s ease-in-out, background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
	position: relative;
	display: inline-block;
	padding: 8px 16px;
	border-radius: 4px;
  }

.dropbtn:hover {
	padding-left: 10px; 
	background-color: #f5f5f5; 
	color: #007bff;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
  }
  
  .dropbtn:hover::before {
	opacity: 1;
  }


.submenu span:hover {
	color: #007bff;
}

.schemaTable:hover .dropdown-content,
.schemaTable:hover div.dropdown-content {
  display: block;
}

.toolbar .button:hover .popup-content {
  display: block;
}

.flex-container {
    display: flex;
    justify-content: center;
    flex-wrap: nowrap;
}

.flex-container > div {
	text-align: center;
	width:fit-content;
	justify-content:space-evenly;
}

.flex-container > div > div {
	text-align: center;
	width:fit-content;
	justify-content: center;
}

#execute.button {
	color: white;
	background-color: #007bff;
	border: 1px solid #222;
	border-radius: 3px;
	padding: 7px;
	margin: 5px;
	transition: .3s;
	font-family: ubuntu, sans-serif;
	font-size: 1em;
}

#execute.button:active, .treeButton:active {
	background-color: #0062cc;
    border-color: #005cbf;
}

.button:hover, button:focus {
	cursor: pointer;
}

#execute {
	margin-top: 5px;;
	width: 10%;
	min-width:100px;
	text-align: center;
}

.CodeMirror {
  border: 1px solid #222;
  height: auto;
}
.CodeMirror-scroll {
  overflow-y: hidden;
  overflow-x: auto;
}

.error {
	color:red;
	transition:.5s;
	overflow:hidden;
	margin: 15px;
}

#output {
	overflow: auto;
}

#database {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	justify-content: space-evenly;
	border: 2px solid black;
}

#database > table {
	margin: 0;
	border: 1px solid black;
	width: 200px; /* Set a fixed width for the tables */
	box-sizing: border-box; /* Include border width in the total width */
	margin: 1em 0 1em 0; /* Add some space between the tables */
	text-align: center;
}

.output-tables{
	height: auto;
    max-height: 400px;
    overflow-y: auto;
	border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    font-family: ubuntu, sans-serif;
	margin: auto;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
	border-radius: 5px 5px 0 0;
	overflow:hidden;
}

.output-tables > table {
	margin: auto;
	width: 100%;
}

.output-tables thead tr{
	background-color: #007bff;
    color: #ffffff;
    text-align: left;
	font-weight: bold;
}

.output-tables thead th{
	cursor: pointer;
}

.output-tables th, .output-tables td{
	padding: 12px 15px;
}

.output-tables tr{
	border-bottom: 1px solid #dddddd;
}

.output-tables tr:nth-of-type(even){
	background-color: #f3f3f3;
}

.output-tables tr:last-of-type{
	border-bottom: 2px solid #007bff;
}

.output-tables > tr:hover{
	background: #000000b6;
	color: #fff;
}
/** Relational Algebra Tree */ 

.ra-tree {
	font-size:18px;
	font-family: ubuntu, sans-serif;
}
.ra-tree .tree {
	margin:16px
}
.ra-tree .tree ul,.ra-tree .tree li {
	margin:0;
	padding:0
}
.ra-tree .tree ul {
	padding-top:20px;
	position:relative;
	padding-left:0px;
	transition:all .5s;
	-webkit-transition:all .5s;
	-moz-transition:all .5s
}
.ra-tree .tree li {
	text-align:center;
	list-style-type:none;
	position:relative;
	padding:20px 5px 0 5px;
	transition:all .5s;
	-webkit-transition:all .5s;
	-moz-transition:all .5s;
	vertical-align:top;
	display:inline-block
}
.ra-tree .tree li::before,.ra-tree .tree li::after {
	content:"";
	position:absolute;
	top:0;
	right:50%;
	border-top:2px solid #ccc;
	width:50%;
	height:20px
}
.ra-tree .tree li::after {
	right:auto;
	left:50%;
	border-left:2px solid #ccc
}
.ra-tree .tree li:only-child::after,.ra-tree .tree li:only-child::before {
	display:none
}
.ra-tree .tree li:only-child {
	padding-top:0;
	margin: auto;
	width: 100%;	
}
.ra-tree .tree li:first-child::before,.ra-tree .tree li:last-child::after {
	border:0 none
}
.ra-tree .tree li:last-child::before {
	border-right:2px solid #ccc;
	border-radius:0 4px 0 0;
	-webkit-border-radius:0 4px 0 0;
	-moz-border-radius:0 4px 0 0
}
.ra-tree .tree li:first-child::after {
	border-radius:4px 0 0 0;
	-webkit-border-radius:4px 0 0 0;
	-moz-border-radius:4px 0 0 0
}
.ra-tree .tree ul ul::before {
	content:"";
	position:absolute;
	top:0;
	left:50%;
	border-left:2px solid #ccc;
	width:0;
	height:20px
}
.ra-tree .tree li div.node {
	background-color:#d6d6d6;
	border:none;
	color:#000;
	padding:5px 10px;
	text-decoration:none;
	display:inline-block;
	max-width:600px;
	border-radius:4px;
	-webkit-border-radius:4px;
	-moz-border-radius:4px;
	transition:all .5s;
	-webkit-transition:all .5s;
	-moz-transition:all .5s
}
.ra-tree .tree li>div.node.active,
.ra-tree .tree li>div.node.active+ul li div.node:not(:hover) {
  background-color: #117a8b;
  color: #fff;
  border: none;
}



.ra-tree .tree li div.node.active+ul li::after,
.ra-tree .tree li div.node.active+ul li::before,
.ra-tree .tree li div.node.active+ul::before,
.ra-tree .tree li div.node.active+ul ul::before {
  border-color: #117a8b;
}

.ra-tree .tree li div.node:hover,
.ra-tree .tree li div.node:hover+ul li div.node {
  background: #007bff !important;
  color: #fff !important;

}

.tree-popup {
	display: none;
	position:absolute;
	color: #000;
	background-color: #f1f1f1;
	border: #93bcff7a;
	padding: .5%;
	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
	z-index: 1;
	border-radius: 5px;
}

.node .tree-popup ul,
.node .tree-popup li {
	all: unset;
	list-style-type: circle;
}
.node .tree-popup li::marker {
	content: "•";
	color:#000;
}

.ra-tree .tree li div.node.active:hover .tree-popup,
.ra-tree .tree li div.node:hover .tree-popup  {
	display: block;
}

.ra-tree .tree li div.node:hover+ul li::after,
.ra-tree .tree li div.node:hover+ul li::before,
.ra-tree .tree li div.node:hover+ul::before,
.ra-tree .tree li div.node:hover+ul ul::before {
  border-color: #007bff !important;
}

.ra-tree li .node {
  cursor: pointer;
}

.ra-tree .tree-popup{
	cursor: text;
}

.ra-tree .label-info-0 {
  background-color: #5bc0de;
}

.ra-tree .label-info-1 {
  background-color: #de865a;
}

.ra-tree .label-info-2 {
  background-color: #aa5ade;
}

.ra-tree .label-info-3 {
  background-color: #5a68de;
}
.ra-tree .label-info-4 {
  background-color: #ded15a;
}
.ra-tree .label-info-5 {
  background-color: #5a80de;
}
/** Toolbar */
.toolbar {
  background: none;
  border-color: #d9d9d9;
  background-color: #f5f5f5;
  border-bottom: 1px solid #ddd;
  font-size: 16px;
  line-height: 31px;
  vertical-align: middle;
}

.toolbar .math {
  font-size: 17px;
}

.toolbar > div {
  display: inline-block;
  margin-right: 6px;
}

.toolbar > div > * {
  padding: 3px;
  flex-direction: column;
  min-width: 1.2em;
  text-align: center;
  height: auto;
  cursor: pointer;
}

.toolbar > div > * > .dropdown-toggle {
  display: inline-block;
  height: 100%;
}

.toolbar > div > *:hover {
  background-color: #d9d9d9;
  border-style: none !important;
}

.expected-output-img{
	display:block; 
	max-width:80%; 
	margin:auto;
}

